Исправление названий элементов

--- a/Lesson 5/index.html
+++ b/Lesson 5/index.html
@@ -10,11 +10,11 @@
 <div class="container">
   <div class="menu">
     <div class="menu__logo">
-      <img class="menu__logo__img" src="img/logo.svg">
+      <img class="menu__logo-img" src="img/logo.svg">
     </div>
 
     <div class="menu__list">
-      <ul class="menu__list__ul">
+      <ul class="menu__rows">
         <li>Home</li>
         <li>Devices</li>
         <li>Delivery & Payment</li>
@@ -22,10 +22,10 @@
         <li>About Us</li>
       </ul>
     </div>
-    <div ><img class="menu__shop-cart__img" src="img/ShoppingCartIcon.svg">
-      <div class="menu__shop-cart__p">cart</div>
+    <div ><img class="menu__shopcart-img" src="img/ShoppingCartIcon.svg">
+      <div class="menu__shopcart-text">cart</div>
     </div>
-        <div class="menu__order"><p class="menu__order__elem1">0</p></div>
+        <div class="menu__order"><p class="menu__order-elem1">0</p></div>
     <button class="menu__button">SIGN IN</button>
   </div>
 </div>
@@ -34,14 +34,14 @@
 
 <div class="container">
 <div class="sub-menu">
-  <ul class="sub-menu__list__ul">
+  <ul class="sub-menu__list">
     <li>TOP SALES</li>
     <li>BRAND FOCUS</li>
     <li class="hi-tech">HI-TECH</li>
     <li>BEST SELLERS</li>
     <li>PROJECT</li>
     <li class="support" >SUPPORT</li>
-    <li class="sub-menu__support__img"><div class="search"></div></li>
+    <li class="sub-menu__img"><div class="search"></div></li>
     <li class="search">I'm looking for ...</li>
   </ul>
 
@@ -53,11 +53,11 @@
 <div class="phone">
 <div class="container">
 <div class="phone_text">
-   <div class="phone__text__h1">
+   <div class="phone__caption">
      <h1>iPhone 6 32Gb <br> Black</h1>
    </div>
 
-  <div class="phone__text__p"><p>At first, for some time,
+  <div class="phone__description"><p>At first, for some time,
     I was not able to answer him one word;
     but as<br> he had taken me in his arms I held fast by him,
     or I should have fallen to <br> the ground.</p>
