--- a/Урок 6/index.html
+++ b/Урок 6/index.html
@@ -46,7 +46,7 @@
 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
   <img src="img/umbrella.png" width="141" height="117"  alt="umbrella">
   <h4 class="text-head">Никаких<br>рисков</h4>
-  <p class="text-description">наша профессиональная<br>деятельность застрахована</p></div>
+  <p class="text-description">Наша профессиональная<br>деятельность застрахована</p></div>
 </div>
 </div>
   
