--- a/lesson 16 JQuery/index.html
+++ b/lesson 16 JQuery/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="normolize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/normolize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
@@ -29,7 +29,7 @@
 <h1> Добро пожаловать в лето!</h1>
 </section>
 
-<script src="jquery-1.12.4.min.js"></script>
+<script src="js/jquery-1.12.4.min.js"></script>
 <script>
   $(document).ready(function () {
     var link = $('.menu-link');
