--- a/Lesson 18/index.html
+++ b/Lesson 18/index.html
@@ -31,7 +31,8 @@
   <div class="block2">
     <h3 class="head">Сохрани свой аккаунт</h3>
     <p class="description">Получи бесплатно  неограниченное количество <br>форм, вопросов и ответов</p>
-  <form id="form" method="get" onsubmit="yaCounter47017335.reachGoal('main_form')" action="#">
+    
+  <form id="form" method="get" onsubmit="yaCounter47017335.reachGoal('main_form')">
 
     <div class="elem-1"> <i class="fa fa-user" aria-hidden="true"></i></div>
     <div class="elem-1"><input class="form-control" id="input-name" minlength="2" name="name"  placeholder="Имя или никнейм" type="text">
