--- a/Lesson 28/index.html
+++ b/Lesson 28/index.html
@@ -41,7 +41,7 @@
         <div class="number-of-order">0</div>
         <div class="plus"> + </div>
        </div>
-        <button><a class="ssilka" href="#">Добавить в корзину</a></button>
+        <button><a href="https://glopart.ru/buy/181879">Добавить в корзину</a></button>
         </div>
       </div>
     </div>
