--- a/Lesson 11 apple/index.html
+++ b/Lesson 11 apple/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <figure>
-  <img src="img/apple_PNG12491.png" alt="rose">
+  <img src="../img/apple_PNG12491.png" alt="rose">
   <div class="text1">Здесь будет много букв</div>
   <figcaption>
     <h3>Это яблоко очень вкусное</h3>
